--- a/animation.html
+++ b/animation.html
@@ -83,33 +83,9 @@
   <!-- 自己的 JS -->
   <script src="js/swiper.js"></script>
 
+  <!-- JavaScript -->
+  <script src="js/hamburger.js"></script>
   <script>
-    // 漢堡選單切換
-    const hamburger = document.getElementById('hamburger');
-    const navMenu = document.getElementById('navMenu');
-    hamburger.addEventListener('click', () => {
-      navMenu.classList.toggle('show');
-    });
-
-    // 子選單滑動切換
-    document.querySelectorAll('.submenu-toggle').forEach(toggle => {
-      toggle.addEventListener('click', function(e) {
-        e.preventDefault();
-        const parentLi = this.parentElement;
-        const submenu = this.nextElementSibling;
-
-        if (submenu.style.display === 'block') {
-          submenu.style.maxHeight = '0';
-          submenu.style.display = 'none';
-          parentLi.classList.remove('active');
-        } else {
-          submenu.style.display = 'block';
-          submenu.style.maxHeight = submenu.scrollHeight + 'px';
-          parentLi.classList.add('active');
-        }
-      });
-    });
-
     // 滾動進場動畫
     const sections = document.querySelectorAll('.fade-in');
     const observer = new IntersectionObserver(entries => {
