--- a/bandprofilegiven.html
+++ b/bandprofilegiven.html
@@ -24,7 +24,7 @@
     <img src="image/main-icon.png" alt="返回首頁">
   </a>
 
-    <!-- 漢堡選單 -->
+  <!-- 漢堡選單 -->
   <div class="hamburger" id="hamburger">&#9776;</div>
 
   <!-- 導覽列 -->
@@ -64,35 +64,12 @@
     </div>
   </div>
 
-  <a href="bandprofilesyh.html" class="arrow-next" title="前往另一團介紹">&#x25BC;</a>
+  <!-- 右側圓圈按鈕 -->
+  <a href="bandprofilesyh.html" class="circle-btn" title="前往下一個故事">
+    <img src="image/syh.jpg" alt="下一頁">
+  </a>
+
   <!-- JavaScript -->
-  <script>
-    // 漢堡選單切換
-    const hamburger = document.getElementById('hamburger');
-    const navMenu = document.getElementById('navMenu');
-    hamburger.addEventListener('click', () => {
-      navMenu.classList.toggle('show');
-    });
-
-    // 子選單滑動切換
-    document.querySelectorAll('.submenu-toggle').forEach(toggle => {
-      toggle.addEventListener('click', function(e) {
-        e.preventDefault();
-        const parentLi = this.parentElement;
-        const submenu = this.nextElementSibling;
-
-        // 切換 submenu 的顯示與高度
-        if (submenu.style.display === 'block') {
-          submenu.style.maxHeight = '0';
-          submenu.style.display = 'none';
-          parentLi.classList.remove('active');
-        } else {
-          submenu.style.display = 'block';
-          submenu.style.maxHeight = submenu.scrollHeight + 'px';
-          parentLi.classList.add('active');
-        }
-      });
-    });
-  </script>
+  <script src="js/hamburger.js"></script>
 </body>
 </html>
