--- a/comic.html
+++ b/comic.html
@@ -104,33 +104,9 @@
     </div>
   </main>
 
+  <!-- JavaScript -->
+  <script src="js/hamburger.js"></script>
   <script>
-    // 漢堡選單切換
-    const hamburger = document.getElementById('hamburger');
-    const navMenu = document.getElementById('navMenu');
-    hamburger.addEventListener('click', () => {
-      navMenu.classList.toggle('show');
-    });
-
-    // 子選單展開/收合
-    document.querySelectorAll('.submenu-toggle').forEach(toggle => {
-      toggle.addEventListener('click', function(e) {
-        e.preventDefault();
-        const parentLi = this.parentElement;
-        const submenu = this.nextElementSibling;
-
-        if (submenu.style.display === 'block') {
-          submenu.style.maxHeight = '0';
-          submenu.style.display = 'none';
-          parentLi.classList.remove('active');
-        } else {
-          submenu.style.display = 'block';
-          submenu.style.maxHeight = submenu.scrollHeight + 'px';
-          parentLi.classList.add('active');
-        }
-      });
-    });
-
     // 點擊書本翻轉，同時關閉其他已翻轉書本
     document.querySelectorAll('.book').forEach(book => {
       book.addEventListener('click', () => {
