--- a/song.html
+++ b/song.html
@@ -98,30 +98,8 @@
   </nav>
 
   <!-- JavaScript -->
+  <script src="js/hamburger.js"></script>
   <script>
-    const hamburger = document.getElementById('hamburger');
-    const navMenu = document.getElementById('navMenu');
-    hamburger.addEventListener('click', () => {
-      navMenu.classList.toggle('show');
-    });
-
-    document.querySelectorAll('.submenu-toggle').forEach(toggle => {
-      toggle.addEventListener('click', function (e) {
-        e.preventDefault();
-        const parentLi = this.parentElement;
-        const submenu = this.nextElementSibling;
-        if (submenu.style.display === 'block') {
-          submenu.style.maxHeight = '0';
-          submenu.style.display = 'none';
-          parentLi.classList.remove('active');
-        } else {
-          submenu.style.display = 'block';
-          submenu.style.maxHeight = submenu.scrollHeight + 'px';
-          parentLi.classList.add('active');
-        }
-      });
-    });
-
     const totalSongs = 11;
     let currentIndex = 0;
 
