--- a/character1.html
+++ b/character1.html
@@ -62,7 +62,7 @@
   <nav class="nav-menu" id="navMenu">
     <ul>
       <li><a href="index.html">首頁</a></li>
-      <li><a href="mymainpage2.html">故事簡介</a></li>
+      <li><a href="#section2">故事簡介</a></li>
       <li class="has-submenu">
         <a href="#" class="submenu-toggle">功能導覽</a>
         <ul class="submenu">
@@ -75,7 +75,6 @@
       </li>
     </ul>
   </nav>
-
   <!-- JavaScript：漢堡選單與動畫 -->
   <script src="js/hamburger.js"></script>
   <script>
