--- a/author.html
+++ b/author.html
@@ -31,7 +31,7 @@
   <nav class="nav-menu" id="navMenu">
     <ul>
       <li><a href="index.html">首頁</a></li>
-      <li><a href="#section2">故事簡介</a></li>
+      <li><a href="index.html#section2">故事簡介</a></li>
       <li class="has-submenu">
         <a href="#" class="submenu-toggle">功能導覽</a>
         <ul class="submenu">
