comic手機板rwd修改5

--- a/comic.html
+++ b/comic.html
@@ -87,14 +87,14 @@
     <div class="book">
       <div class="book-inner">
         <div class="book-front"><img src="image/comic6.jpeg" alt="書本6"></div>
-        <div class="book-back"><h3>第六集</h3><p>立夏被柊邀請去syh代打，柊將真冬的前男友--由紀所寫的歌曲交給立夏，希望他能夠把寫到一半的歌完成。</p></div>
+        <div class="book-back"><h3>第六集</h3><p>立夏被邀請去syh代打，柊將真冬的前男友所寫的歌曲交給立夏讓他完成歌曲。</p></div>
       </div>
     </div>
     <!-- 第七本 -->
     <div class="book">
       <div class="book-inner">
         <div class="book-front"><img src="image/comic7.jpeg" alt="書本7"></div>
-        <div class="book-back"><h3>第七集</h3><p>柊跟玄純經歷了一些事後成為情侶，而因為立夏忙著代打的關係真冬又以為自己再度被同伴及音樂拋下。</p></div>
+        <div class="book-back"><h3>第七集</h3><p>柊跟玄純成為情侶，而真冬以為自己又再度被同伴及音樂拋下。</p></div>
       </div>
     </div>
     <!-- 第八本 -->
@@ -108,7 +108,7 @@
     <div class="book">
       <div class="book-inner">
         <div class="book-front"><img src="image/comic9.jpeg" alt="書本9"></div>
-        <div class="book-back"><h3>第九集</h3><p>立夏終於將由紀未能完成的歌曲演唱給了真冬，遲遲未能解開的心結就此消散。是對過去的道別，並展望未來。</p></div>
+        <div class="book-back"><h3>第九集</h3><p>立夏終於將由紀未能完成的歌曲演唱給真冬，遲遲未能解開的心結就此消散。</p></div>
       </div>
     </div>
   </main>
