狗狗走動動畫

--- a/bandprofilegiven.html
+++ b/bandprofilegiven.html
@@ -64,6 +64,10 @@
     </div>
   </div>
 
+  <div class="dog-stage">
+    <div class="dog-sprite" id="dog"></div>
+  </div>
+
   <!-- 右側圓圈按鈕 -->
   <a href="bandprofilesyh.html" class="circle-btn" title="前往下一個故事">
     <img src="image/syh.jpg" alt="下一頁">
@@ -71,5 +75,6 @@
 
   <!-- JavaScript -->
   <script src="js/hamburger.js"></script>
+  <script src="js/dog.js"></script>
 </body>
 </html>
