--- a/bandprofilesyh.html
+++ b/bandprofilesyh.html
@@ -64,11 +64,16 @@
     </div>
   </div>
 
+  <div class="dog-stage">
+    <div class="dog-sprite" id="dog"></div>
+  </div>
+
   <!-- 右側圓圈按鈕 -->
   <a href="bandprofilegiven.html" class="circle-btn" title="前往下一個故事">
     <img src="image/given.jpg" alt="下一頁">
   </a>
   <!-- JavaScript -->
   <script src="js/hamburger.js"></script>
+  <script src="js/dog.js"></script>
 </body>
 </html>
