樂團介紹更改

--- a/bandprofilegiven.html
+++ b/bandprofilegiven.html
@@ -52,7 +52,7 @@
 
     <div class="info-section">
       <h1><strong>Given</strong></h1>
-      <p><strong>團名由來：</strong>原先的團名是 seasons，在真冬加入之後便改成了 given。</p>
+      <p><strong>團名由來：</strong>原先只有春夏秋時團名是the seasons，在真冬加入之後便將團名改成了given。在真冬解開心結後四人也以given名義出道開始各種演出活動。</p>
       <p><strong>團員：</strong>
         <a href="haruki.html">中山春樹</a>、<a href="akihiko.html">梶秋彥</a>、<a href="ritsuka.html">上山立夏</a>、<a href="mafuyu.html">佐藤真冬</a>
       </p>
