--- a/author.html
+++ b/author.html
@@ -20,6 +20,21 @@
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300..700;1,300..700&family=Great+Vibes&family=Lexend:wght@100..900&family=Zen+Kurenaido&display=swap" rel="stylesheet">
 </head>
 <body>
+  <!-- Loading 畫面 -->
+  <div id="loader">
+    <div class="polaroid-container">
+      <img src="image/loading1.jpg" class="polaroid p1">
+      <img src="image/loading2.jpg" class="polaroid p2">
+      <img src="image/loading3.jpg" class="polaroid p3">
+      <img src="image/loading4.jpg" class="polaroid p4">
+      <img src="image/loading5.jpg" class="polaroid p5">
+      <img src="image/loading6.jpg" class="polaroid p6">
+      <img src="image/loading7.jpg" class="polaroid p7">
+      <img src="image/loading8.jpg" class="polaroid p8">
+    </div>
+  </div>
+
+  <!-- 回首頁 -->
   <a href="index.html" class="home-logo">
     <img src="image/main-icon.png" alt="返回首頁">
   </a>
@@ -79,6 +94,7 @@
 
   <!-- JavaScript -->
   <script src="js/hamburger.js"></script>
+  <script src="js/loading.js"></script>
   <script>
         // ✅ 滾動進場動畫
     const sections = document.querySelectorAll('.fade-in');
