--- a/song.html
+++ b/song.html
@@ -21,6 +21,21 @@
 </head>
 
 <body>
+  <!-- Loading 畫面 -->
+  <div id="loader">
+    <div class="polaroid-container">
+      <img src="image/loading1.jpg" class="polaroid p1">
+      <img src="image/loading2.jpg" class="polaroid p2">
+      <img src="image/loading3.jpg" class="polaroid p3">
+      <img src="image/loading4.jpg" class="polaroid p4">
+      <img src="image/loading5.jpg" class="polaroid p5">
+      <img src="image/loading6.jpg" class="polaroid p6">
+      <img src="image/loading7.jpg" class="polaroid p7">
+      <img src="image/loading8.jpg" class="polaroid p8">
+    </div>
+  </div>
+
+  <!-- 回首頁圖示 -->
   <a href="index.html" class="home-logo">
     <img src="image/main-icon.png" alt="返回首頁">
   </a>
@@ -118,5 +133,6 @@
 
   <script src="js/song.js"></script>
   <script src="js/hamburger.js"></script>
+  <script src="js/loading.js"></script>
 </body>
 </html>
