loading animation fixed

--- a/author.html
+++ b/author.html
@@ -94,9 +94,10 @@
 
   <!-- JavaScript -->
   <script src="js/hamburger.js"></script>
+  <script src="js/common.js"></script>
   <script src="js/loading.js"></script>
   <script>
-        // ✅ 滾動進場動畫
+    //滾動進場動畫
     const sections = document.querySelectorAll('.fade-in');
     const observer = new IntersectionObserver(entries => {
     entries.forEach(entry => {
