--- a/bandprofile.html
+++ b/bandprofile.html
@@ -71,6 +71,7 @@
 
   <!-- JavaScript -->
   <script src="js/hamburger.js"></script>
+  <script src="js/common.js"></script>
   <script src="js/loading.js"></script>
 </body>
 </html>
