--- a/character.html
+++ b/character.html
@@ -93,6 +93,7 @@
 
   <!-- JS  -->
   <script src="js/hamburger.js"></script>
+  <script src="js/common.js"></script>
   <script src="js/loading.js"></script>
 </body>
 </html>
