--- a/comicanimation.html
+++ b/comicanimation.html
@@ -72,6 +72,7 @@
 
   <!-- JavaScript -->
   <script src="js/hamburger.js"></script>
+  <script src="js/common.js"></script>
   <script src="js/loading.js"></script>
 </body>
 </html>
