--- a/song.html
+++ b/song.html
@@ -133,6 +133,7 @@
 
   <script src="js/song.js"></script>
   <script src="js/hamburger.js"></script>
+  <script src="js/common.js"></script>
   <script src="js/loading.js"></script>
 </body>
 </html>
