--- a/character1.html
+++ b/character1.html
@@ -25,36 +25,6 @@
     <img src="image/main-icon.png" alt="返回首頁" />
   </a>
 
-  <!-- 人物資訊與圖片 -->
-  <div class="character-info">
-    <div class="slide-in-left text-block">
-      <h1>上山立夏</h1>
-      <h2>所屬樂團: Given、SYH代打</h2>
-      <p>樂團定位:Gt.</p>
-      <p>生日: 8月1日</p>
-      <p>聲優: 內田雄馬</p>
-    </div>
-    <img src="imagecharacter/立夏人物圖.png" alt="立夏人物" class="slide-in-center character-img" />
-  </div>
-
-  <!-- 台詞區塊 -->
-  <div class="slide-in-right quote">
-    <p>擁有驚人的吉他技巧。<br>愛照顧人又重情義，戀愛方面略顯生澀，與真冬交往中。</p>
-  </div>
-
-  <!-- 右側角色縮圖選單 -->
-  <div class="character-menu">
-    <a href="character1.html">
-      <img src="imagecharacter/立夏小圖.jpg" alt="立夏">
-    </a>
-    <a href="character2.html">
-      <img src="imagecharacter/真冬小圖.jpg" alt="真冬">
-    </a>
-    <a href="character.html">
-      <img src="imagecharacter/毛玉.jpg" alt="毛玉小圖">
-    </a>
-  </div>
-
   <!-- 漢堡選單按鈕 -->
   <div class="hamburger" id="hamburger">&#9776;</div>
 
@@ -75,38 +45,49 @@
       </li>
     </ul>
   </nav>
+
+<!-- 主內容區 -->
+  <div class="bg-layer" aria-hidden="true"></div>
+
+  <main class="container">
+    <!-- 左側：角色圖&change -->
+    <section class="left">
+      <div class="portrait-wrap">
+        <button class="change-btn" id="changeBtn" aria-label="切換角色圖片">⟳</button>
+        <img id="portrait" src="image/夏冬backgorund.jpg" alt="角色圖片" />
+      </div>
+    </section>
+
+    <!-- 中間：角色簡介（固定內容） -->
+    <section class="center">
+      <h1 id="charName">佐藤真冬</h1>
+      <div class="bio" id="charBio">
+        <p>
+          擁有令人難以忘懷的歌聲。在初中時碰見由紀兩人開始交往，後來卻因為紛爭由紀離世。直到遇見立夏，經歷了許多事情後，真冬才真正的愛上了音樂。最後跟立夏結婚，共度一生。
+        </p>
+        <ul>
+          <li>所屬樂團:Given</li>
+          <li>樂團定位:Gt.&Vo.</li>
+          <li>生日:2月28日</li>
+        </ul>
+      </div>
+    </section>
+
+    <!-- 右側：兩個圓形按鈕（可放圖片） -->
+    <section class="right">
+      <div class="circle-actions">
+        <a href="character2.html" class="circle" id="gotoCp" aria-label="前往 CP">
+          <img src="imagecharacter/立夏小圖.png" alt="CP">
+        </a>
+        <a href="character.html" class="circle" id="backIndex" aria-label="回到登場人物目錄">
+          <img src="imagecharacter/毛玉.png" alt="目錄">
+        </a>
+      </div>
+    </section>
+  </main>
+
   <!-- JavaScript：漢堡選單與動畫 -->
   <script src="js/hamburger.js"></script>
-  <script>
-    // 滑入動畫
-    window.addEventListener('load', () => {
-      const leftElements = document.querySelectorAll('.slide-in-left');
-      const rightElements = document.querySelectorAll('.slide-in-right');
-
-      leftElements.forEach(el => {
-        el.style.opacity = '0';
-        el.style.transform = 'translateX(-100px)';
-      });
-
-      rightElements.forEach(el => {
-        el.style.opacity = '0';
-        el.style.transform = 'translateX(100px)';
-      });
-
-      setTimeout(() => {
-        leftElements.forEach(el => {
-          el.style.transition = 'all 1s ease';
-          el.style.opacity = '1';
-          el.style.transform = 'translateX(0)';
-        });
-
-        rightElements.forEach(el => {
-          el.style.transition = 'all 1s ease';
-          el.style.opacity = '1';
-          el.style.transform = 'translateX(0)';
-        });
-      }, 200);
-    });
-  </script>
+  <script src="js/character1.js"></script>
 </body>
 </html>
