--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <!-- 開場動畫 -->
   <div class="intro" id="intro">
     <p>忘れないよ</p>
-    <p>いいえ、絶対に忘れてしまいます</p>
+    <p>いいえ、きっとお前は忘れる</p>
   </div>
 
   <a href="index.html" class="home-logo">
