--- a/character2.html
+++ b/character2.html
@@ -54,7 +54,7 @@
     <section class="left">
       <div class="portrait-wrap">
         <button class="change-btn" id="changeBtn" aria-label="切換角色圖片">⟳</button>
-        <img id="portrait" src="image/夏冬backgorund.jpg" alt="角色圖片" />
+        <img id="portrait" src="" alt="角色圖片" />
       </div>
     </section>
 
