--- a/character3.html
+++ b/character3.html
@@ -24,37 +24,6 @@
     <img src="image/main-icon.png" alt="返回首頁" />
   </a>
 
-  
-  <!-- 背景與角色主圖 -->
-  <div class="character-info">
-    <div class="slide-in-left text-block">
-      <h1>梶秋彥</h1>
-      <h2>所屬樂團:Given</h2>
-      <p>樂團定位:Dr.</p>
-      <p>生日:10月21日</p>
-      <p>聲優:江口拓也</p>
-    </div>
-    <img src="imagecharacter/秋彥人物圖.png" alt="秋彥人物圖" class="slide-in-left character-img" />
-  </div>
-
-  <!-- 台詞區塊 -->
-  <div  class="slide-in-right quote">
-    <p>跟雨月為前男友關係。<br>發現真正能救贖自己的是春樹後向雨月提分手與春樹交往。</p>
-  </div>
-
-  <!-- 右側角色選單（縮為兩個） -->
-  <div  class="character-menu">
-    <a href="character3.html">
-      <img src="imagecharacter/秋彥小圖.jpg" alt="秋彥小圖">
-    </a>
-    <a href="character4.html">
-      <img src="imagecharacter/春樹小圖.jpg" alt="春樹小圖">
-    </a>
-    <a href="character.html">
-      <img src="imagecharacter/毛玉.jpg" alt="毛玉小圖">
-    </a>
-  </div>
-
   <!-- 漢堡選單 -->
   <div class="hamburger" id="hamburger">&#9776;</div>
 
@@ -76,39 +45,48 @@
     </ul>
   </nav>
 
+  <!-- 主內容區 -->
+  <div class="bg-layer" aria-hidden="true"></div>
+
+  <main class="container">
+    <!-- 左側：角色圖&change -->
+    <section class="left">
+      <div class="portrait-wrap">
+        <button class="change-btn" id="changeBtn" aria-label="切換角色圖片">⟳</button>
+        <img id="portrait" src="" alt="角色圖片" />
+      </div>
+    </section>
+
+    <!-- 中間：角色簡介（固定內容） -->
+    <section class="center">
+      <h1 id="charName">梶秋彥</h1>
+      <div class="bio" id="charBio">
+        <p>
+          初登場給人的印象是一個海王，後面隨著故事發展揭開他與雨月的故事後才知道他一直為愛情所苦。後來因為真冬的歌解開了心結，與雨月告別，並與春樹開始交往。
+        </p>
+        <ul>
+          <li>所屬樂團:Given</li>
+          <li>樂團定位:Dr.</li>
+          <li>生日:10月21日</li>
+        </ul>
+      </div>
+    </section>
+
+    <!-- 右側：兩個圓形按鈕（可放圖片） -->
+    <section class="right">
+      <div class="circle-actions">
+        <a href="character4.html" class="circle" id="gotoCp" aria-label="前往 CP">
+          <img src="imagecharacter/春樹小圖.png" alt="CP">
+        </a>
+        <a href="character.html" class="circle" id="backIndex" aria-label="回到登場人物目錄">
+          <img src="imagecharacter/毛玉.png" alt="目錄">
+        </a>
+      </div>
+    </section>
+  </main>
+
   <!-- JavaScript -->
   <script src="js/hamburger.js"></script>
-  
-  <script>
-    // 滑入動畫觸發
-    window.addEventListener('load', () => {
-      const leftElements = document.querySelectorAll('.slide-in-left');
-      const rightElements = document.querySelectorAll('.slide-in-right');
-
-      leftElements.forEach(el => {
-        el.style.opacity = '0';
-        el.style.transform = 'translateX(-100px)';
-      });
-
-      rightElements.forEach(el => {
-        el.style.opacity = '0';
-        el.style.transform = 'translateX(100px)';
-      });
-
-      setTimeout(() => {
-        leftElements.forEach(el => {
-          el.style.transition = 'all 1s ease';
-          el.style.opacity = '1';
-          el.style.transform = 'translateX(0)';
-        });
-
-        rightElements.forEach(el => {
-          el.style.transition = 'all 1s ease';
-          el.style.opacity = '1';
-          el.style.transform = 'translateX(0)';
-        });
-      }, 200); // 延遲動畫開始
-    });
-  </script>
+  <script src="js/character3.js"></script>
 </body>
 </html>
