--- a/character7.html
+++ b/character7.html
@@ -24,33 +24,6 @@
     <img src="image/main-icon.png" alt="返回首頁" />
   </a>
 
-  
-  <!-- 背景與角色主圖 -->
-  <div class="character-info">
-    <div class="slide-in-left text-block">
-      <h1>村田雨月</h1>
-      <h2>小提琴家</h2>
-      <p>生日:6月6日</p>
-      <p>聲優:淺沼晉太郎</p>
-    </div>
-    <img src="imagecharacter/雨月人物圖.png" alt="雨月人物圖" class="slide-in-left character-img" />
-  </div>
-
-  <!-- 台詞區塊 -->
-  <div  class="slide-in-right quote">
-    <p>天才型小提琴家。<br>與秋彥分手後成為國際大賽常勝軍，跟真冬較為親近。</p>
-  </div>
-
-  <!-- 右側角色選單（縮為兩個） -->
-  <div class="character-menu">
-    <a href="character7.html">
-      <img src="imagecharacter/雨月小圖.jpg" alt="雨月小圖">
-    </a>
-    <a href="character.html">
-      <img src="imagecharacter/毛玉.jpg" alt="毛玉小圖">
-    </a>
-  </div>
-
   <!-- 漢堡選單 -->
   <div class="hamburger" id="hamburger">&#9776;</div>
 
@@ -72,39 +45,44 @@
     </ul>
   </nav>
 
+  <!-- 主內容區 -->
+  <div class="bg-layer" aria-hidden="true"></div>
+
+  <main class="container">
+    <!-- 左側：角色圖&change -->
+    <section class="left">
+      <div class="portrait-wrap">
+        <button class="change-btn" id="changeBtn" aria-label="切換角色圖片">⟳</button>
+        <img id="portrait" src="" alt="角色圖片" />
+      </div>
+    </section>
+
+    <!-- 中間：角色簡介（固定內容） -->
+    <section class="center">
+      <h1 id="charName">村田雨月</h1>
+      <div class="bio" id="charBio">
+        <p>
+          喜歡著秋彥但覺得愛情會使自己無法好好創作音樂。與秋彥發生爭吵後把對方趕出家中，後來聽見了真冬的歌從歌詞中感悟到了對愛情的釋然，在路燈下與秋彥道別後前往國外發展。日後成為了世界首屈一指的小提琴家。
+        </p>
+        <ul>
+          <li>小提琴家</li>
+          <li>生日:6月6日</li>
+        </ul>
+      </div>
+    </section>
+
+    <!-- 右側：兩個圓形按鈕（可放圖片） -->
+    <section class="right">
+      <div class="circle-actions">
+        <a href="character.html" class="circle" id="backIndex" aria-label="回到登場人物目錄">
+          <img src="imagecharacter/毛玉.png" alt="目錄">
+        </a>
+      </div>
+    </section>
+  </main>
+
   <!-- JavaScript -->
   <script src="js/hamburger.js"></script>
-  
-  <script>
-    // 滑入動畫觸發
-    window.addEventListener('load', () => {
-      const leftElements = document.querySelectorAll('.slide-in-left');
-      const rightElements = document.querySelectorAll('.slide-in-right');
-
-      leftElements.forEach(el => {
-        el.style.opacity = '0';
-        el.style.transform = 'translateX(-100px)';
-      });
-
-      rightElements.forEach(el => {
-        el.style.opacity = '0';
-        el.style.transform = 'translateX(100px)';
-      });
-
-      setTimeout(() => {
-        leftElements.forEach(el => {
-          el.style.transition = 'all 1s ease';
-          el.style.opacity = '1';
-          el.style.transform = 'translateX(0)';
-        });
-
-        rightElements.forEach(el => {
-          el.style.transition = 'all 1s ease';
-          el.style.opacity = '1';
-          el.style.transform = 'translateX(0)';
-        });
-      }, 200); // 延遲動畫開始
-    });
-  </script>
+  <script src="js/character7.js"></script>
 </body>
 </html>
