--- a/author.html
+++ b/author.html
@@ -78,16 +78,20 @@
     <h2 class="works-title">相關作品</h2>
     <div class="works">
       <div class="work-item">
-        <div class="work-circle">
-          <img src="image/links.jpg" alt="links">
-        </div>
-        <p>Links是由9位主要角色、4對CP及6段美麗的短篇故事拼湊成完整的世界，有點可惜的是因為頁數限制，有些故事沒有交代得非常清楚(也是另一種美?)，儘管如此，故事的意境跟畫面都非常非常的豐富。</p>
+        <a href="https://www.animate-onlineshop.com.tw/Form/Product/ProductDetail.aspx?shop=0&pid=9784403690105&srsltid=AfmBOoqDfkETBvIm1NIbh-GROJHQ74IRZB2WGCzsH6PZcQ52GzlwNBDT" target="_blank" class="work-link">
+          <div class="work-circle">
+            <img src="image/10thmix.jpg" alt="given10th">
+          </div>
+        </a>
+        <p>GIVEN 10th是漫畫GIVEN所有角色十年後的故事，有點像是漫畫的番外篇。10th是在Cheri+連載，如今10th已經完結，也正式推出了10th單行本並已發售。無論是Links還是Given，刺傷老師都對「無論曾經多麼美好燦爛，人都遲早要放下過去繼續往前走」這樣的理念有許多著墨，說是理念好像也怪怪的，因為即使你不想這麼做，時間還是會推著你往這個方向前進。</p>
       </div>
       <div class="work-item">
-        <div class="work-circle">
-          <img src="image/10thmix.jpg" alt="given10th">
-        </div>
-        <p>GIVEN 10th是漫畫GIVEN所有角色十年後的故事，有點像是漫畫的番外篇。10th是在Cheri+連載，如今10th已經完結，之後會推出一本10th單行本。無論是Links還是Given，刺傷老師都對「無論曾經多麼美好燦爛，人都遲早要放下過去繼續往前走」這樣的理念有許多著墨，說是理念好像也怪怪的，因為即使你不想這麼做，時間還是會推著你往這個方向前進。</p>
+        <a href="https://www.animate-onlineshop.jp/pn/%E3%80%90%E5%90%8C%E4%BA%BA%E8%AA%8C%E3%80%91GIVEN+BACK+SIDE+01/pd/3277014/?srsltid=AfmBOoq8j3DauKiBho5phApfida_gkYR1cwSHqq_Ch3d0MtUksSkjoWf&woman_view=1&adult_view=1" target="_blank" class="work-link">
+          <div class="work-circle">
+            <img src="image/backside.jpg" alt="backside">
+          </div>
+        </a>
+        <p>是老師最新創作的番外篇!故事是十年後立夏真冬長大後的開車篇章~當初高中時期還很青澀的立夏終於要轉變為肉食系男子了🔞🙌</p>
       </div>
     </div>
   </section>
