--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400;600&family=Zen+Kurenaido&display=swap" rel="stylesheet">
 
   <!-- 樣式 -->
-  <link rel="stylesheet" href="css/index.css"
-  
-  >
+  <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
   <!-- 葉子動畫畫布 -->
