--- a/character7.html
+++ b/character7.html
@@ -1,27 +1,27 @@
 <!DOCTYPE html>
 <html lang="zh-Hant">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Given 被贈與的未來</title>
 
-  <!-- favicon 與 manifest 設定 -->
-  <link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96" />
-  <link rel="icon" type="image/svg+xml" href="favicon.svg" />
-  <link rel="shortcut icon" href="favicon.ico" />
-  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
-  <meta name="apple-mobile-web-app-title" content="Given" />
-  <link rel="manifest" href="site.webmanifest" />
+  <!-- favicon -->
+  <link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96">
+  <link rel="icon" type="image/svg+xml" href="favicon.svg">
+  <link rel="shortcut icon" href="favicon.ico">
+  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+  <meta name="apple-mobile-web-app-title" content="Given">
+  <link rel="manifest" href="site.webmanifest">
 
   <!-- 字體與樣式 -->
-  <link rel="stylesheet" href="css/character7.css" />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300..700;1,300..700&family=Great+Vibes&family=Lexend:wght@100..900&family=Zen+Kurenaido&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="css/character7.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300..700;1,300..700&family=Great+Vibes&family=Lexend:wght@100..900&family=Zen+Kurenaido&display=swap" rel="stylesheet">
 </head>
 <body>
   <a href="index.html" class="home-logo">
-    <img src="image/main-icon.png" alt="返回首頁" />
+    <img src="image/main-icon.png" alt="返回首頁">
   </a>
 
   <!-- 漢堡選單 -->
@@ -49,15 +49,15 @@
   <div class="bg-layer" aria-hidden="true"></div>
 
   <main class="container">
-    <!-- 左側：角色圖&change -->
+    <!--左側:角色圖(現在跟10年後)-->
     <section class="left">
       <div class="portrait-wrap">
         <button class="change-btn" id="changeBtn" aria-label="切換角色圖片">⟳</button>
-        <img id="portrait" src="" alt="角色圖片" />
+        <img id="portrait" src="" alt="角色圖片">
       </div>
     </section>
 
-    <!-- 中間：角色簡介（固定內容） -->
+    <!--中間:角色介紹-->
     <section class="center">
       <h1 id="charName">村田雨月</h1>
       <div class="bio" id="charBio">
@@ -71,7 +71,7 @@
       </div>
     </section>
 
-    <!-- 右側：兩個圓形按鈕（可放圖片） -->
+    <!--右側:角色cp選單-->
     <section class="right">
       <div class="circle-actions">
         <a href="character.html" class="circle" id="backIndex" aria-label="回到登場人物目錄">
